# SDL_game

./: .gitignore  CMakeLists.txt
Resources/shaders/: Basic.shader  Basic_old.shader
src/: CMakeLists.txt
src/App/: CMakeLists.txt  main.cpp
src/Game/: CMakeLists.txt  Game.cpp  Game.h
src/Game/Objects/: LogManager.cpp  Object.h
src/Game/render/: SdlManager.cpp  SdlManager.h  Window.cpp  Window.h
src/Game/render/Listeners/: WindowListener.h
src/Game/render/opengl/: IndexBuffer.cpp  IndexBuffer.h  OpenGl.cpp  OpenGl.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Utils/: CMakeLists.txt  Utils.cpp  Utils.h
